# rk-m87-sync

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
docs/: PROTOCOL.md
nix/: module.nix
scripts/: decrypt_upf.py  rk-m87-sync.py
src/: daemon.rs  error.rs  hid.rs  main.rs  protocol.rs  state.rs  volume.rs
