[package]
name = "rk-m87-sync"
version = "0.2.0"
edition = "2021"
description = "Sync system time and volume to RK M87 keyboard LCD"
repository = "https://github.com/ElXreno/royal-cludge-software"
license = "MIT"

[dependencies]
libc = "0.2"
nix = { version = "0.29", default-features = false, features = ["poll"] }
libpulse-binding = "2.30"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
signal-hook = { version = "0.3", features = ["iterator"] }
argh = "0.1"
thiserror = "2"
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["auto-color", "humantime"] }
